[Home]

Summary:ASTERISK-26455: cdr_radius / cel_radius: try fix memory leak
Reporter:Badalian Vyacheslav (slavon)Labels:
Date Opened:2016-10-10 11:49:25Date Closed:2016-10-30 13:39:52
Priority:MinorRegression?
Status:Closed/CompleteComponents:CDR/cdr_radius
Versions:Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:Direct leak of 9 byte(s) in 1 object(s) allocated from:
   #0 0x7fa4e9e90db0 in strdup (/usr/local/lib64/libasan.so.3+0x57db0)
   #1 0x7fa4b8bfdfbe in _ast_strdup /usr/src/asterisk/include/asterisk/utils.h:642
   #2 0x7fa4b8bff2dd in load_module /usr/src/asterisk/cdr/cdr_radius.c:275
   #3 0x67441c in start_resource /usr/src/asterisk/main/loader.c:1026
   #4 0x676574 in load_resource_list /usr/src/asterisk/main/loader.c:1290
   #5 0x677523 in load_modules /usr/src/asterisk/main/loader.c:1451
   #6 0x49444a in asterisk_daemon /usr/src/asterisk/main/asterisk.c:4615
   #7 0x493794 in main /usr/src/asterisk/main/asterisk.c:4372
   #8 0x7fa4e7279b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44)


Direct leak of 9 byte(s) in 1 object(s) allocated from:
   #0 0x7fa4e9e90db0 in strdup (/usr/local/lib64/libasan.so.3+0x57db0)
   #1 0x7fa4bc755eee in _ast_strdup /usr/src/asterisk/include/asterisk/utils.h:642
   #2 0x7fa4bc757118 in load_module /usr/src/asterisk/cel/cel_radius.c:247
   #3 0x67441c in start_resource /usr/src/asterisk/main/loader.c:1026
   #4 0x676574 in load_resource_list /usr/src/asterisk/main/loader.c:1290
   #5 0x677523 in load_modules /usr/src/asterisk/main/loader.c:1451
   #6 0x49444a in asterisk_daemon /usr/src/asterisk/main/asterisk.c:4615
   #7 0x493794 in main /usr/src/asterisk/main/asterisk.c:4372
   #8 0x7fa4e7279b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44)

Patch in gerrit
Comments:By: Asterisk Team (asteriskteam) 2016-10-10 11:49:26.091-0500

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

By: Badalian Vyacheslav (slavon) 2016-10-30 13:39:52.878-0500

Fixed in master branch